--- a/stocks/static/form.css
+++ b/stocks/static/form.css
@@ -38,7 +38,7 @@ input[type="password"] {
 
 button {
     width: 100%;
-    background-color: #000;  /* ⬅️ Black button */
+    background-color: #55a769;
     color: white;
     padding: 14px;
     border: none;
