--- a/stocks/templates/login.html
+++ b/stocks/templates/login.html
@@ -1,25 +1,26 @@
+{% extends 'base.html' %}
 
-{% extends 'base.html '%}
+{% block title %}Login - Stock Marketplace{% endblock %}
 
-{%block content%}
-<div class ="form-wrapper"></div>
+{% block content %}
 <div class="form-container">
-    <form method  = 'POST' action="">
-         {% csrf_token %}
+    <h2>Login</h2>
+    <form method="POST" action="">
+        {% csrf_token %}
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" name="username" id="username">
+            <input type="text" name="username" id="username" required>
         </div>
 
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="text" name="password" id="password">
+            <input type="password" name="password" id="password" required>
         </div>
 
         <div class="form-group">
-            <button type="submit">Submit</button>
+            <button type="submit">Login</button>
         </div>
     </form>
+    <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
 </div>
-
 {% endblock %}
