--- a/stocks/templates/register.html
+++ b/stocks/templates/register.html
@@ -1,76 +1,18 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User Registration</title>
-    <link rel="stylesheet" href="{% static 'register.css' %}">
-</head>
-<body>
-    <div class="form-container">
-        <h2 style="text-align: center; margin-bottom: 20px;">Register</h2>
+{% extends 'base.html' %}
 
-        {% if messages %}
-            {% for message in messages %}
-                <p class="message">{{ message }}</p>
-            {% endfor %}
-        {% endif %}
+{% block title %}Register - Stock Marketplace{% endblock %}
 
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-
-            <div class="form-group">
-                <label>Username:</label>
-                <input type="text" name="username" placeholder="Username" required>
-            </div>
-
-            <div class="form-group">
-                <label>Password:</label>
-                <input type="password" name="password" placeholder="Password" required>
-            </div>
-
-            <div class="form-group">
-                <label>Email:</label>
-                <input type="text" name="email" placeholder="Email" required>
-            </div>
-
-            <div class="form-group">
-                <label>First Name:</label>
-                <input type="text" name="first_name" placeholder="First Name" required>
-            </div>
-
-            <div class="form-group">
-                <label>Last Name:</label>
-                <input type="text" name="last_name" placeholder="Last Name" required>
-            </div>
-
-            <div class="form-group">
-                <label>Phone Number:</label>
-                <input type="text" name="phoneNumber" placeholder="Phone Number" required>
-            </div>
-
-            <div class="form-group">
-                <label>Address:</label>
-                <input type="text" name="address" placeholder="Address" required>
-            </div>
-
-            <div class="form-group">
-                <label>PAN Card Number:</label>
-                <input type="text" name="panCardNumber" placeholder="PAN Card Number" required>
-            </div>
-
-            <div class="form-group">
-                <label>Profile Picture:</label>
-                <input type="file" name="profilePic" required>
-            </div>
-
-            <div class="form-group">
-                <label>PAN Card Image:</label>
-                <input type="file" name="panCardImage" required>
-            </div>
-
+{% block content %}
+<div class="form-container">
+    <h2>Register</h2>
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ user_form.as_p }}
+        {{ info_form.as_p }}
+        <div class="form-group">
             <button type="submit">Register</button>
-        </form>
-    </div>
-</body>
-</html>
+        </div>
+    </form>
+    <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
+</div>
+{% endblock %}
